[project]
name = "interpolation-ts"
version = "0.1.0"
description = ""
authors = [
    {name = "DMegaritis",email = "dmgrei3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
