[project]
name = "interpolation_ts"
version = "0.1.0"
description = ""
authors = [
    {name = "DMegaritis",email = "dmgrei3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "pandas>=2.2.0",
    "scipy>=1.11.2",
    "matplotlib>=3.7.2,<4",

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
